# sec44

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed_demo_data.py
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  cli.py  config.py  runtime.py  sender.py  spool.py
agent/collectors/: __init__.py  base.py  common.py  factory.py
alembic/: env.py
alembic/versions/: 0001_initial_cloud_schema.py
core/: __init__.py  baseline.py  dedup.py  engine.py  models.py
mac_watchdog/: __init__.py  config.py  db.py  main.py  models.py  sanitizer.py  scheduler.py  scoring.py
mac_watchdog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mac_watchdog/collectors/: __init__.py  filewatch.py  logins.py  network.py  processes.py
mac_watchdog/insights/: __init__.py  baseline.py  brief.py  dedup.py  deltas.py  drivers.py  engine.py  schemas.py
mac_watchdog/migrations/: 0001_daily_metrics_insights.sql  __init__.py
mac_watchdog/services/: __init__.py  action_queue.py  insight_service.py  metrics_service.py
mac_watchdog/web/: app.py  middleware.py  routes.py
mac_watchdog/web/static/: styles.css
mac_watchdog/web/templates/: base.html  events.html  insights.html  listeners.html  overview.html  settings.html
server/: __init__.py  __main__.py  api_v1.py  app.py  auth.py  auth_routes.py  cache.py  celery_app.py  config.py  dashboard.py  db.py  ingest.py  insights.py  logging.py  models.py  scheduler.py  schemas.py  security.py  tasks.py  telemetry.py
server/static/: styles.css
server/templates/: base.html  device_detail.html  devices.html  events.html  fleet.html  insights.html  login.html  overview.html
shared/: __init__.py  constants.py  enums.py  sanitization.py  schemas.py  serialization.py  signing.py
tests/: conftest.py  test_api_gateway_security.py  test_auth_flows.py  test_collectors_resilience.py  test_config.py  test_db.py  test_fuzz_inputs.py  test_insight_engine_resilience.py  test_insights_baseline.py  test_insights_brief.py  test_insights_dedup.py  test_insights_drivers.py  test_sanitizer.py  test_security_controls.py  test_web_local_bind.py
