[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-watchdog"
version = "0.1.0"
description = "Local-first macOS security watchdog"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mac Watchdog" }]
dependencies = [
  "fastapi==0.115.8",
  "uvicorn==0.34.0",
  "jinja2==3.1.5",
  "psutil==6.1.1",
  "pydantic==2.10.6",
  "watchdog==6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "httpx==0.28.1",
  "ruff==0.9.6",
  "black==24.10.0",
  "mypy==1.15.0",
]

[project.scripts]
mac-watchdog = "mac_watchdog.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mac_watchdog*"]

[tool.setuptools.package-data]
"mac_watchdog.web" = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
